<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:foregroundGravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/tv_detail_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:text="@string/nama"
            android:layout_below="@+id/img_avatar"/>

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            tools:text="@string/type"
            android:gravity="center"
            android:layout_below="@+id/tv_detail_user_name"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_detail_name">

            <LinearLayout
                android:id="@+id/following_layout"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/following_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    tools:text="@string/_0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/following_text"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/follower_layout"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/following_layout">

                <TextView
                    android:id="@+id/follower_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    tools:text="@string/_0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/follower_text"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repository"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/follower_layout">

                <TextView
                    android:id="@+id/repository_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    tools:text="@string/_0"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Repository"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/black"
        app:tabIndicatorColor="@color/black"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="match_parent" />

</LinearLayout>